--- a/mail/templates/list.html
+++ b/mail/templates/list.html
@@ -29,7 +29,7 @@
 
 {% block attribute %}
 <style>
-    h2 {
+    h1 {
         text-align: center;
         color: green;
     }
@@ -57,7 +57,7 @@
         width: 75%;
         margin-right: 30px;
        
-        border: gray dashed thin;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
 
     ul li {
@@ -88,7 +88,7 @@
 </style>
 {% endblock %}
 
-{% block list %}{% endblock %}
+{% block list %}<h1>Your friends</h1>{% endblock %}
 
 {% block main %}
 
@@ -111,7 +111,7 @@
     <h3>{{ name }}</h3> <!--Usage for checking input/output-->
     <h3>{{ email }}</h3> <!--Usage for checking input/output-->
 
-    <h2>Your friends</h2>
+    
     <h3 id="message">{{ message }}</h3>
     {% for person in people %}  
     <div class="result">
