--- a/mail/static/styles.css
+++ b/mail/static/styles.css
@@ -1,10 +1,10 @@
-/* Size for brand */
+
 nav .navbar-brand
 {
     font-size: xx-large;
 }
 
-/* Colors for brand */
+
 nav .navbar-brand .blue
 {
     color: #537fbe;
@@ -22,9 +22,13 @@ nav .navbar-brand .green
     color: #2e944b;
 }
 
-nav #navbar li {
-    text-decoration: underline;
+
+
+.nav-item
+{
+    font-weight: bold;
 }
+
 
 #deleteAccount 
 {
@@ -33,5 +37,4 @@ nav #navbar li {
 
 footer {
     clear: both;
-}
-
+} 
