--- a/mail/templates/find.html
+++ b/mail/templates/find.html
@@ -28,8 +28,9 @@
 {% block attribute %}
 <style>
 
-    h2 {
-        color: blue;
+    h1 {
+        text-align: center;
+        color: green;
     }
 
     #message {
@@ -55,7 +56,7 @@
         width: 75%;
         margin-right: 30px;
        
-        border: gray dashed thin;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
 
     ul li {
@@ -82,7 +83,10 @@
 </style>
 {% endblock %}
 
+{% block find %}<h1>People</h1>{% endblock %}
+
 {% block main %}
+
 <div id="parent">
     <div id="find">
         <form action="/find" method="post">
@@ -102,7 +106,7 @@
     <h3>{{ name }}</h3> <!--Usage for checking input/output-->
     <h3>{{ email }}</h3> <!--Usage for checking input/output-->
 
-    <h2>Find someone you know</h2>
+
     <h3 id="message">{{ message }}</h3>
     {% for person in people %}  
     <div id="result">
