--- a/mail/templates/inbox.html
+++ b/mail/templates/inbox.html
@@ -17,15 +17,12 @@
 
     #sent {
         margin:auto;
-        border: 1px gray solid;
+    
         border-top: none;
         border-bottom: none;
         width: 50%;
         max-height: fit-content;
-    }
-
-    #sent div {
-        border-bottom: 1px gray solid;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     }
 
 
@@ -35,6 +32,11 @@
         color: blue;
     }
 
+    p {
+        height: 10px;
+        font-weight: bold;
+    }
+
     #paragraph {
         text-align: left;
         font-weight: bold;
@@ -42,7 +44,14 @@
         padding: 10px;
         width: 100%;
         height: 150px;
-        border: 1px gray solid;
+        min-height: 50px;
+        
+        border: none;
+        background: #E0EAFC;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
     }
 
     #mail {
@@ -60,7 +69,7 @@
 </style>
 {% endblock %}
 
-{% block sent %}
+{% block sending %}
 <h1>From... to You</h1>
 {% endblock %}
 
@@ -85,7 +94,7 @@
 <h4>{{ notfound }}</h4>
 {% for mail in mails %}
 <div id="sent">
-    <div><p id="mail-sender">{{ mail['sender'] }} <br> {{ mail['email'] }} <br> {{ mail['date'] }}</p></div>
+    <p id="mail-sender">{{ mail['sender'] }} </p> <p>{{ mail['email'] }}</p>  <p> {{ mail['date'] }}</p>
     <textarea id="paragraph" disabled>{{ mail['mail'] }}</textarea>
 </div>
 {% endfor %}
