--- a/mail/templates/layout.html
+++ b/mail/templates/layout.html
@@ -37,6 +37,10 @@
                     }
                 }
             });
+
+
+
+
         </script>
 
     </head>
@@ -44,33 +48,47 @@
     <body>
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="blue">S</span><span class="red">K</span><span class="yellow">A</span><span class="green">D</span><span class="blue">O</span><span class="red">O</span><span class="yellow">S</span><span class="green">H</span></a>
-                <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
-                    <span class="navbar-toggler-icon"></span>
+
+            <div class="container-fluid">      
+
+              <a class="navbar-brand mt-2 mt-lg-0" href="/"><span class="red">S</span><span class="yellow">K</span><span class="blue">A</span><span class="green">D</span><span class="yellow">O</span>
+                  <div class="spinner-border text-danger" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div><span class="blue">S</span><span class="green">H</span></a>             
+                <button
+                aria-controls="navbar"
+                class="navbar-toggler"
+                type="button"
+                data-mdb-toggle="collapse"
+                data-mdb-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/requests">Friend requests</a></li>
                             <li class="nav-item"><a class="nav-link" href="/list">Friend list</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/find">Find people</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/find">People</a></li>
                             <li class="nav-item"><a class="nav-link" href="/inbox">Inbox</a></li>
                             <li class="nav-item"><a class="nav-link" href="/sending">Sent</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/change_information">Change Information</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/change_information">Information</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/change_password">Change Password</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/change_password" style="color: green;">Change Password</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/logout" style="color: red;">Log Out</a></li>
                         </ul>
                     {% else %}
                         <ul class="navbar-nav ms-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/register" style="color: blue;">Register</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/login" style="color: blue;">Log In</a></li>
                         </ul>
                     {% endif %}
                 </div>
             </div>
+     
         </nav>
 
 
@@ -97,6 +115,14 @@
 
             <!--list.html-->
             {% block list %}{% endblock %}
+
+            <!--find.html-->
+            {% block find %}{% endblock %}
+
+    
+
+            <!--request.html-->
+            {% block request %}{% endblock %}
         </div>
 
         <main class="container-fluid py-5 text-center">
