--- a/mail/templates/list.html
+++ b/mail/templates/list.html
@@ -67,23 +67,48 @@
     ul li textarea {
         text-align: center;
         width: 100%;
-        height: 40px;
+        height: 30px;
         background: none;
         border: none;
+        min-height: 30px;
     }
 
     #person {
         font-size: larger;
         font-weight: bold;
+        height: 30px;
     }
 
     #person-email {
         font-weight: bold;
+        height: 30px;
     }
 
     .hidden {
         display: none;
     }
+
+    #lower-button {
+        background-color: green;
+
+    }
+
+    button {
+        font-weight: bold;
+        background-color: yellow;
+    }
+
+    #reject {
+        background-color: red;
+    }
+
+    .reject {
+        width:min-content;
+        margin: auto;
+        margin-top: 10px;
+        margin-right: 432px;
+    }
+
 
 </style>
 {% endblock %}
@@ -115,39 +140,59 @@
     <h3 id="message">{{ message }}</h3>
     {% for person in people %}  
     <div class="result">
-        <form action="/add" method="post">
-            <ul>
-                <li><textarea id="person" name="name" readonly>{{ person["name"] }}</textarea></li>
-                <li><textarea id="person-email" name="email" readonly>{{ person["email"] }}</textarea></li>
-                {% if person["birth"] %}
-                <li><h6>Birth: {{ person["birth"] }}</h6></li>
-                {% endif %}
-                {% if person["place"] %}
-                <li><h6>Place: {{ person["place"] }}</h6></li>
-                {% endif %}
-                {% if person["number"] %}
-                <li><h6>Number: {{ person["number"] }}</h6></li>
-                {% endif %}
-                <button id="upper-button" type="submit">{{ person["operation"] }}</button>
-            </ul>
-            <br>
-        </form>
+        <div>
+            <div>
+                <form action="/add" method="post">
+                    <ul>
+                        <li><textarea id="person" name="name" readonly>{{ person["name"] }}</textarea></li>
+                        <li><textarea id="person-email" name="email" readonly>{{ person["email"] }}</textarea></li>
+                        {% if person["birth"] %}
+                        <li><h6>Birth: {{ person["birth"] }}</h6></li>
+                        {% endif %}
+                        {% if person["place"] %}
+                        <li><h6>Place: {{ person["place"] }}</h6></li>
+                        {% endif %}
+                        {% if person["number"] %}
+                        <li><h6>Number: {{ person["number"] }}</h6></li>
+                        {% endif %}
+                        <div class="button"><button id="upper-button" type="submit">{{ person["operation"] }}</button></div>                      
+                    </ul>
+                    <br>
+                </form>
 
+           
+                <!--Reject-->
+                <form class="reject" action="/reject" method="post">
+                    <ul>
+                        <li><textarea class="hidden" name="name" readonly>{{ person["name"] }}</textarea></li>
+                        <li><textarea class="hidden" name="email" readonly>{{ person["email"] }}</textarea></li>
+                        {% if person["reject"] %}
+                        <div class="button"><button id="reject" type="submit">{{ person["reject"] }}</button></div>
+                        {% endif %}
+                    </ul>
+                </form>
+    
+            </div>
+    
+ 
+        </div>
         
-        <!--Send mail-->
-        <form action="/send" method="post">
-            <ul>
-                <li><textarea class="hidden" name="name" readonly>{{ person["name"] }}</textarea></li>
-                <li><textarea class="hidden" name="email" readonly>{{ person["email"] }}</textarea></li>
-                {% if person["button"] %}
-                <button id="lower-button" type="submit">{{ person["button"] }}</button>
-                {% endif %}
-            </ul>
-            <br>
-        </form>
-    </div>
+        <div>
+            <!--Send mail-->
+            <form action="/send" method="post">
+                <ul>
+                    <li><textarea class="hidden" name="name" readonly>{{ person["name"] }}</textarea></li>
+                    <li><textarea class="hidden" name="email" readonly>{{ person["email"] }}</textarea></li>
+                    {% if person["button"] %}
+                    <div class="button"><button id="lower-button" type="submit">{{ person["button"] }}</button></div>
+                    {% endif %}
+                </ul>
+                <br>
+            </form>
+        </div>
 
     </div>
+
     {% endfor %}
 </div>
 {% endblock %}
