--- a/mail/templates/requests.html
+++ b/mail/templates/requests.html
@@ -65,9 +65,10 @@
     ul li textarea {
         text-align: center;
         width: 100%;
-        height: 40px;
+        height: 30px;
         background: none;
         border: none;
+        min-height: 30px;
     }
 
     #person {
@@ -78,6 +79,30 @@
     #person-email {
         font-weight: bold;
     }
+
+    
+    .hidden {
+        display: none;
+    }
+
+    
+    button {
+        font-weight: bold;
+        background-color: yellow;
+    }
+
+    #reject {
+        background-color: red;
+    }
+
+    .reject {
+        width:min-content;
+        margin: auto;
+        margin-top: 10px;
+        margin-right: 432px;
+    }
+
+  
 
 </style>
 {% endblock %}
@@ -109,23 +134,36 @@
     <h3 id="message">{{ message }}</h3>
     {% for person in people %}  
     <div id="result">
-        <form action="/add" method="post">
-            <ul>
-                <li><textarea id="person" name="name" readonly>{{ person["name"] }}</textarea></li>
-                <li><textarea id="person-email" name="email" readonly>{{ person["email"] }}</textarea></li>
-                {% if person["birth"] %}
-                <li><h6>Birth: {{ person["birth"] }}</h6></li>
-                {% endif %}
-                {% if person["place"] %}
-                <li><h6>Place: {{ person["place"] }}</h6></li>
-                {% endif %}
-                {% if person["number"] %}
-                <li><h6>Number: {{ person["number"] }}</h6></li>
-                {% endif %}
-                <button type="submit">{{ person["operation"] }}</button>
-            </ul>
-            <br>
-        </form>
+        <div>
+            <form action="/add" method="post">
+                <ul>
+                    <li><textarea id="person" name="name" readonly>{{ person["name"] }}</textarea></li>
+                    <li><textarea id="person-email" name="email" readonly>{{ person["email"] }}</textarea></li>
+                    {% if person["birth"] %}
+                    <li><h6>Birth: {{ person["birth"] }}</h6></li>
+                    {% endif %}
+                    {% if person["place"] %}
+                    <li><h6>Place: {{ person["place"] }}</h6></li>
+                    {% endif %}
+                    {% if person["number"] %}
+                    <li><h6>Number: {{ person["number"] }}</h6></li>
+                    {% endif %}
+                    <button type="submit">{{ person["operation"] }}</button>
+                </ul>
+                <br>
+            </form>
+
+            <!--Reject-->
+            <form class="reject" action="/reject" method="post">
+                <ul>
+                    <li><textarea class="hidden" name="name" readonly>{{ person["name"] }}</textarea></li>
+                    <li><textarea class="hidden" name="email" readonly>{{ person["email"] }}</textarea></li>
+                    {% if person["reject"] %}
+                    <div class="button"><button id="reject" type="submit">{{ person["reject"] }}</button></div>
+                    {% endif %}
+                </ul>
+            </form>
+        </div>
     </div>
     {% endfor %}
 </div>
