--- a/mail/templates/layout.html
+++ b/mail/templates/layout.html
@@ -15,7 +15,7 @@
         <link href="https://upload.wikimedia.org/wikipedia/commons/3/3d/Envelope-letter-icon.png" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
-        <title>SKADOOSH: {% block title %}{% endblock %}</title>
+        <title>MAIL: {% block title %}{% endblock %}</title>
 
         {% block attribute %}{% endblock %}
 
@@ -51,21 +51,10 @@
 
             <div class="container-fluid">      
 
-              <a class="navbar-brand mt-2 mt-lg-0" href="/"><span class="red">S</span><span class="yellow">K</span><span class="blue">A</span><span class="green">D</span><span class="yellow">O</span>
-                  <div class="spinner-border text-danger" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                  </div><span class="blue">S</span><span class="green">H</span></a>             
-                <button
-                aria-controls="navbar"
-                class="navbar-toggler"
-                type="button"
-                data-mdb-toggle="collapse"
-                data-mdb-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation">
+                <a class="navbar-brand" href="/"><span class="blue">M</span><span class="red">A</span><span class="yellow">I</span><span class="green">L</span></a>          
+                <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="collapse navbar-collapse" id="navbar">
                     {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
